--- a/faq.html
+++ b/faq.html
@@ -21,10 +21,8 @@
             </nav>
         </header>
         <div class="about wrapper">
-            <h2 id="about">ガッキ使いとは</h2>
-            <p>ガッキ使いは楽器の使い手による新感覚バラエティ風お笑いライブです。<br>
-                出演者の募集もしているのでお気軽にお問い合わせください！
-            </p>
+            <h2 id="faq">よくある質問</h2>
+            <p>出演に際し予想される質問内容を記載します</p>
         </div>
         <section id="location">
             <div class="wrapper">
@@ -49,4 +47,3 @@
             </div>
         </section>
     </body>
-</html>
