--- a/casts.html
+++ b/casts.html
@@ -21,10 +21,8 @@
             </nav>
         </header>
         <div class="about wrapper">
-            <h2 id="about">ガッキ使いとは</h2>
-            <p>ガッキ使いは楽器の使い手による新感覚バラエティ風お笑いライブです。<br>
-                出演者の募集もしているのでお気軽にお問い合わせください！
-            </p>
+            <h2 id="casts">ガッキ使い達</h2>
+            <p>既に出演が決まっている人を公開します</p>
         </div>
         <section id="location">
             <div class="wrapper">
@@ -49,4 +47,3 @@
             </div>
         </section>
     </body>
-</html>
