--- a/corner.html
+++ b/corner.html
@@ -21,10 +21,8 @@
             </nav>
         </header>
         <div class="about wrapper">
-            <h2 id="about">ガッキ使いとは</h2>
-            <p>ガッキ使いは楽器の使い手による新感覚バラエティ風お笑いライブです。<br>
-                出演者の募集もしているのでお気軽にお問い合わせください！
-            </p>
+            <h2 id="corner">主な企画</h2>
+            <p>ここで既に公表されている企画名を記載します</p>
         </div>
         <section id="location">
             <div class="wrapper">
@@ -49,4 +47,3 @@
             </div>
         </section>
     </body>
-</html>
