Update:開催場所の分離

--- a/faq.html
+++ b/faq.html
@@ -17,33 +17,11 @@
                 <li><a href="casts.html">ガッキ使い達</a></li>
                 <li><a href="faq.html">よくある質問</a></li>
                 <li><a href="inquiry.html">お問い合わせ</a></li>
-                <li><a href="#location">会場</a></li>
+                <li><a href="location.html">会場</a></li>
             </nav>
         </header>
         <div class="about wrapper">
             <h2 id="faq">よくある質問</h2>
             <p>出演に際し予想される質問内容を記載します</p>
         </div>
-        <section id="location">
-            <div class="wrapper">
-                <div class="location-info">
-                    <div class="location-map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6479.920327482809!2d139.53807918154405!3d35.70259790188069!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018ef9c1933615f%3A0x1ae384d414f3cd35!2z44K544Kk44Oz44Kw44OT44Or!5e0!3m2!1sja!2sjp!4v1750255460619!5m2!1sja!2sjp" 
-                        width="800" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                    <div class="location-text">
-                        <p>
-                            武蔵野スイングホール<br>
-                            JR中央線「武蔵境駅」北口より徒歩2分<br>
-                            nonowa口(交通系IC専用改札)より徒歩1分<br>
-                            東京都武蔵野市境2丁目14番1号スイングビル北棟2階<br>
-                            18:45開場/19:00開演<br>
-                            一般 ¥2,000<br>
-                            学生 ¥1,000<br>
-                            中学生以下無料
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
     </body>
