--- a/inquiry.html
+++ b/inquiry.html
@@ -25,3 +25,4 @@
             <p><a href="https://www.secure-cloud.jp/sf/sp/1749032799QEqliooJ">参加申し込みはこちら！</a></p>
         </div>
     </body>
+</html>
