--- a/casts.html
+++ b/casts.html
@@ -24,5 +24,28 @@
             <h2 id="casts">ガッキ使い達</h2>
             <p>既に出演が決まっている人を公開します</p>
         </div>
+        <div class="wrapper grid">
+            <div class="member">
+                <img src="./images/square.png" width="320" height="320">
+                <p>出演者A<br>
+                    楽器名
+                </p>
+            </div>
+            <div class="member">
+                <img src="./images/square.png" width="320" height="320">
+                <p>出演者B<br>
+                    楽器名</p>
+            </div>
+            <div class="member">
+                <img src="./images/square.png" width="320" height="320">
+                <p>出演者C<br>
+                    楽器名</p>
+            </div>
+            <div class="member">
+                <img src="./images/square.png" width="320" height="320">
+                <p>出演者D<br>
+                    楽器名</p>
+            </div>
+        </div>
     </body>
 </html>
