Update:faq.html

--- a/faq.html
+++ b/faq.html
@@ -24,17 +24,13 @@
             <h2 id="faq">よくある質問</h2>
             <p>出演に際し予想される質問内容を記載します</p>
             <div class="tweet-center">
-                <!--blockquoteをラップ-->
-                <blockquote class="twitter-tweet">
-                    <p lang="ja" dir="ltr">
-                        <a href="https://t.co/31REioLvhQ">https://t.co/31REioLvhQ</a>
-                        <br><br>明日22時！<br>しっかり説明します！<br>事前質問はこちら↓まで
-                        <a href="https://t.co/hyONXybREn">https://t.co/hyONXybREn</a>
-                    </p>&mdash; こむそう.com (@komusou_syaku) 
-                    <a href="https://twitter.com/komusou_syaku/status/1935699983212376155?ref_src=twsrc%5Etfw">June 19, 2025</a>
-                </blockquote>
+                <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">今夜22時から！<br>
+                    8/9(土)開催、『ガッキ使い』出演者募集について<br><br> 
+                    <a href="https://t.co/31REioLvhQ">https://t.co/31REioLvhQ</a></p>
+                    &mdash; こむそう.com (@komusou_syaku) 
+                    <a href="https://twitter.com/komusou_syaku/status/1936016099507945967?ref_src=twsrc%5Etfw">June 20, 2025</a>
+                </blockquote> 
             </div>
-            <!--scriptはここ-->
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </body>
