Update:ポストの埋め込み場所、お問い合わせの追記

--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
         </header>
         <div class="about wrapper">
             <h2 id="about">ガッキ使いとは</h2>
-            <p>ガッキ使いは楽器の使い手による新感覚バラエティ風お笑いライブです。<br>
-                出演者の募集もしているのでお気軽にお問い合わせください！
+                ガッキ使いは楽器の使い手による新感覚バラエティ風お笑いライブです。<br>
+                出演者の募集もしているのでお気軽にお問い合わせください！<br>
+                こちらからでもイベントの詳細をお聞きいただけます！
             </p>
         </div>
+        <div class="tweet-center">
+            <blockquote class="twitter-tweet"><p lang="zxx" dir="ltr"><a href="https://t.co/31REioLvhQ">https://t.co/31REioLvhQ</a>
+            </p>&mdash; こむそう.com (@komusou_syaku) <a href="https://twitter.com/komusou_syaku/status/1936046175528124606?ref_src=twsrc%5Etfw">June 20, 2025</a></blockquote>
+        </div>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </body>
 </html>
