--- a/inquiry.html
+++ b/inquiry.html
@@ -22,7 +22,10 @@
         </header>
         <div class="about wrapper">
             <h2 id="inquiry">お問い合わせ</h2>
-            <p><a href="https://www.secure-cloud.jp/sf/sp/1749032799QEqliooJ">参加申し込みはこちら！</a></p>
+            <p>
+                <a href="https://www.secure-cloud.jp/sf/sp/1749032799QEqliooJ">参加申し込みはこちら！</a><br>
+                チケットの予約フォームは追って公開予定です！
+            </p>
         </div>
     </body>
 </html>
