--- a/corner.html
+++ b/corner.html
@@ -22,7 +22,12 @@
         </header>
         <div class="about wrapper">
             <h2 id="corner">主な企画</h2>
-            <p>ここで既に公表されている企画名を記載します</p>
+            <h3>全体合奏</h3>
+            <p>出演者みんなでみんなで一緒に2曲演奏します！</p>
+            <h3>音蹴鞠選手権</h3>
+            <p>童謡などをテーマに出演者が一音ずつ出して曲を演奏する、間違えたら負けの勝ち残りゲームです(^^)</p>
+            <h3>音で伝えろ!ターゲットは誰だ?!</h3>
+            <p>音を使ってお題に人を表現し、目隠しをした回答者は音だけで誰かを当てていきます！</p>
         </div>
     </body>
 </html>
