Update:ガッキ使いとは

--- a/index.html
+++ b/index.html
@@ -22,9 +22,17 @@
         </header>
         <div class="about wrapper">
             <h2 id="about">ガッキ使いとは</h2>
-                ガッキ使いは楽器の使い手による新感覚バラエティ風お笑いライブです。<br>
-                出演者の募集もしているのでお気軽にお問い合わせください！<br>
-                こちらからでもイベントの詳細をお聞きいただけます！
+                お笑い芸人の中には、実は学生時代に吹奏楽部などで楽器を経験していた人が意外と多くいます。<br>
+                しかし、舞台ではその特技をネタに活かす機会が少なく、せっかくの腕前が埋もれたまま…ということも。<br>
+                だったら、「楽器ができる人が、楽器を通じて遊び心のあるライブをやったら面白いのでは？」<br><br>
+                そんな発想から生まれたのが《ガッキ使い》です。<br><br>
+                最初は芸人を中心に集めようとしていたのですが、せっかくなら業界の垣根を越えてみよう！と方向転換。<br>
+                俳優、モデル、コスプレイヤーなど、さまざまなジャンルの人たちに声をかけてみることにしました。<br>
+                もちろん、ガチの演奏家の参加も大歓迎！ただし、あくまで“遊び心”がベースのイベントです。<br>
+                「本気の人」も「ふざけたい人」も、「ちょっと楽器触ってみたい」人も、みんなで音を楽しむ場をつくりたいのです。<br>
+                業種や経験、技術レベルに関係なく、楽器をきっかけに人とつながる――そんな新しいライブを一緒に作りませんか？<br>
+                どうぞお気軽にご参加ください！<br>
+                全体のご説明は下記からでもお聞きいただけます！
             </p>
         </div>
         <div class="tweet-center">
