--- a/faq.html
+++ b/faq.html
@@ -22,6 +22,55 @@
         </header>
         <div class="about wrapper">
             <h2 id="faq">よくある質問</h2>
-            <p>出演に際し予想される質問内容を記載します</p>
+            <p>
+                Q. 主催者はどういう方ですか？<br>
+                お笑い芸人「こむそう.com」が主催しています。<br>
+                虚無僧の姿で尺八を吹くというユニークなスタイルで活動しており、<br>
+                漫才やライブへの出演、M-1グランプリ出場経験もある実力派です。<br>
+                トゥインクル・コーポレーションに所属し精力的に活動しています。<br>
+                本イベントは、事務所とは関係なく個人で企画・主催しています。<br>
+                ⸻<br>
+                Q. 出演料はいくらですか？<br>
+                1人あたり3,000円の出演料をご用意いただきます。<br>
+                ⸻<br>
+                Q. チケットノルマはありますか？<br>
+                チケットノルマはありません。<br>
+                予約フォームにて「お目当ての出演者」を選べるようになっており、<br>
+                そこに記載された方へチケット売上の全額が渡る仕組みです。<br>
+                ⸻<br>
+                Q. イベントの時間はどれくらいですか？<br>
+                本編は19:00〜20:00過ぎ頃までを予定しています。<br>
+                その後に写真撮影や出演者との交流タイムも設ける予定です。<br>
+                ⸻<br>
+                Q. 演奏の練習はどれくらい必要ですか？<br>
+                厳密なリハーサルはなく、機転を利かせて楽しむスタイルのライブです。<br>
+                用意されている曲は2曲ですが、厳しいパート分けなどはありません。<br>
+                提供されたピアノ譜を参考に、自由に音を重ねて合奏を楽しむ形になります。<br>
+                なお、歌唱は禁止となっています。<br>
+                ⸻<br>
+                Q. 衣装の着替えはありますか？<br>
+                男女別の楽屋を用意しており、それぞれの中にカーテンも設置してあります。<br>
+                衣装を重視して活動されている方でも、安心してお着替えいただけます。<br>
+                ⸻<br>
+                Q. 終演後にお客さんと交流できますか？<br>
+                はい、写真撮影や交流の時間を長めに設ける予定です。<br>
+                ただし、物販や有料のチェキ撮影など、お金のやり取りが発生する行為はご遠慮ください。<br>
+                ⸻<br>
+                Q. 芸人でなくても参加できますか？<br>
+                「楽しく楽器をやるライブ」という趣旨に賛同していただける方なら、どなたでも歓迎です。<br>
+                但し、あくまで「興行」としてのライブであり下記の方には難しいことご理解ください。<br>
+                ・身内だけで発表したい方<br>
+                ・世間に活動を知られたくない方<br>
+                ・技術を見せたい、PRしたいという色が強い方<br>
+                ⸻<br>
+                Q. 知人で参加させたい人がいるのですが…<br>
+                他薦も大歓迎です！<br>
+                「この人おもしろそう」「出たらウケそう」<br>
+                といった方がいれば、ぜひご紹介ください。<br>
+                ⸻<br>
+                Q. 差し入れは可能ですか？<br>
+                はい、受付時点でも終演後でも差し入れは可能です。<br>
+                ただし、手作りの飲食物など、内容によってはご配慮をお願いいたします。
+            </p>
     </body>
 </html>
