--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
         </header>
         <div class="about wrapper">
             <h2 id="about">ガッキ使いとは</h2>
+            <img src="./images/gakkiTsukai.jpg" width="640" height="400">
+            <div class="tweet-center">
+                <blockquote class="twitter-tweet"><p lang="zxx" dir="ltr"><a href="https://t.co/31REioLvhQ">https://t.co/31REioLvhQ</a>
+                </p>&mdash; こむそう.com (@komusou_syaku) <a href="https://twitter.com/komusou_syaku/status/1936046175528124606?ref_src=twsrc%5Etfw">June 20, 2025</a></blockquote>
+            </div>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <p>
                 お笑い芸人の中には、実は学生時代に吹奏楽部などで楽器を経験していた人が意外と多くいます。<br>
                 しかし、舞台ではその特技をネタに活かす機会が少なく、せっかくの腕前が埋もれたまま…ということも。<br>
                 だったら、「楽器ができる人が、楽器を通じて遊び心のあるライブをやったら面白いのでは？」<br><br>
@@ -31,14 +38,8 @@
                 もちろん、ガチの演奏家の参加も大歓迎！ただし、あくまで“遊び心”がベースのイベントです。<br>
                 「本気の人」も「ふざけたい人」も、「ちょっと楽器触ってみたい」人も、みんなで音を楽しむ場をつくりたいのです。<br>
                 業種や経験、技術レベルに関係なく、楽器をきっかけに人とつながる――そんな新しいライブを一緒に作りませんか？<br>
-                どうぞお気軽にご参加ください！<br>
-                全体のご説明は下記からでもお聞きいただけます！
+                どうぞお気軽にご参加ください！
             </p>
         </div>
-        <div class="tweet-center">
-            <blockquote class="twitter-tweet"><p lang="zxx" dir="ltr"><a href="https://t.co/31REioLvhQ">https://t.co/31REioLvhQ</a>
-            </p>&mdash; こむそう.com (@komusou_syaku) <a href="https://twitter.com/komusou_syaku/status/1936046175528124606?ref_src=twsrc%5Etfw">June 20, 2025</a></blockquote>
-        </div>
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </body>
 </html>
