--- a/corner.html
+++ b/corner.html
@@ -23,7 +23,7 @@
         <div class="about wrapper">
             <h2 id="corner">主な企画</h2>
             <h3>全体合奏</h3>
-            <p>出演者みんなでみんなで一緒に2曲演奏します！</p>
+            <p>出演者みんなで一緒に2曲演奏します！</p>
             <h3>音蹴鞠選手権</h3>
             <p>童謡などをテーマに出演者が一音ずつ出して曲を演奏する、間違えたら負けの勝ち残りゲームです(^^)</p>
             <h3>音で伝えろ!ターゲットは誰だ?!</h3>
