--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header class="page-header wrapper">
             <h1><a href="index.html">ガッキ使い</a></h1>
             <nav class="main-nav">
-                <li><a href="index.html">ガッキ使いとは</a></li>
+                <li><a href="about.html">ガッキ使いとは</a></li>
                 <li><a href="corner.html">主な企画</a></li>
                 <li><a href="casts.html">ガッキ使い達</a></li>
                 <li><a href="faq.html">よくある質問</a></li>
@@ -21,25 +21,7 @@
             </nav>
         </header>
         <div class="about wrapper">
-            <h2 id="about">ガッキ使いとは</h2>
-            <img src="./images/gakkiTsukai.jpg" width="640" height="400">
-            <div class="tweet-center">
-                <blockquote class="twitter-tweet"><p lang="zxx" dir="ltr"><a href="https://t.co/31REioLvhQ">https://t.co/31REioLvhQ</a>
-                </p>&mdash; こむそう.com (@komusou_syaku) <a href="https://twitter.com/komusou_syaku/status/1936046175528124606?ref_src=twsrc%5Etfw">June 20, 2025</a></blockquote>
-            </div>
-            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            <p>
-                お笑い芸人の中には、実は学生時代に吹奏楽部などで楽器を経験していた人が意外と多くいます。<br>
-                しかし、舞台ではその特技をネタに活かす機会が少なく、せっかくの腕前が埋もれたまま…ということも。<br>
-                だったら、「楽器ができる人が、楽器を通じて遊び心のあるライブをやったら面白いのでは？」<br><br>
-                そんな発想から生まれたのが《ガッキ使い》です。<br><br>
-                最初は芸人を中心に集めようとしていたのですが、せっかくなら業界の垣根を越えてみよう！と方向転換。<br>
-                俳優、モデル、コスプレイヤーなど、さまざまなジャンルの人たちに声をかけてみることにしました。<br>
-                もちろん、ガチの演奏家の参加も大歓迎！ただし、あくまで“遊び心”がベースのイベントです。<br>
-                「本気の人」も「ふざけたい人」も、「ちょっと楽器触ってみたい」人も、みんなで音を楽しむ場をつくりたいのです。<br>
-                業種や経験、技術レベルに関係なく、楽器をきっかけに人とつながる――そんな新しいライブを一緒に作りませんか？<br>
-                どうぞお気軽にご参加ください！
-            </p>
+            <img src="./images/flier.jpg">
         </div>
     </body>
 </html>
