--- a/location.html
+++ b/location.html
@@ -12,7 +12,7 @@
         <header class="page-header wrapper">
             <h1><a href="index.html">ガッキ使い</a></h1>
             <nav class="main-nav">
-                <li><a href="index.html">ガッキ使いとは</a></li>
+                <li><a href="about.html">ガッキ使いとは</a></li>
                 <li><a href="corner.html">主な企画</a></li>
                 <li><a href="casts.html">ガッキ使い達</a></li>
                 <li><a href="faq.html">よくある質問</a></li>
