Update:チケット予約のURL

--- a/inquiry.html
+++ b/inquiry.html
@@ -24,7 +24,7 @@
             <h2 id="inquiry">お問い合わせ</h2>
             <p>
                 <a href="https://www.secure-cloud.jp/sf/sp/1749032799QEqliooJ">参加申し込みはこちら！</a><br>
-                チケットの予約フォームは追って公開予定です！
+                <a href="https://www.secure-cloud.jp/sf/sp/1750422125ikDhGCoz">チケットの予約はこちら！</a>
             </p>
         </div>
     </body>
