--- a/faq.html
+++ b/faq.html
@@ -31,12 +31,13 @@
                 本イベントは、事務所とは関係なく個人で企画・主催しています。<br>
                 ⸻<br>
                 Q. 出演料はいくらですか？<br>
-                1人あたり3,000円の出演料をご用意いただきます。<br>
+                出演料は無料です。<br>
                 ⸻<br>
                 Q. チケットノルマはありますか？<br>
                 チケットノルマはありません。<br>
                 予約フォームにて「お目当ての出演者」を選べるようになっており、<br>
-                そこに記載された方へチケット売上の全額が渡る仕組みです。<br>
+                そこに記載された方へチケット売上が渡る仕組みです。<br>
+                チケット2枚目(学生料金が含まれる場合学生チケットを1枚目にカウント)から全額バックと致します。
                 ⸻<br>
                 Q. イベントの時間はどれくらいですか？<br>
                 本編は19:00〜20:00過ぎ頃までを予定しています。<br>
