--- a/faq.html
+++ b/faq.html
@@ -37,7 +37,7 @@
                 チケットノルマはありません。<br>
                 予約フォームにて「お目当ての出演者」を選べるようになっており、<br>
                 そこに記載された方へチケット売上が渡る仕組みです。<br>
-                チケット2枚目(学生料金が含まれる場合学生チケットを1枚目にカウント)から全額バックと致します。
+                チケット2枚目(学生料金が含まれる場合、学生チケットを1枚目にカウント)から全額バックと致します。<br>
                 ⸻<br>
                 Q. イベントの時間はどれくらいですか？<br>
                 本編は19:00〜20:00過ぎ頃までを予定しています。<br>
