--- a/casts.html
+++ b/casts.html
@@ -45,6 +45,11 @@
                 <p>こむそう.com<br>
                     尺八</p>
             </div>
+            <div class="member">
+                <img src="./images/kimono.jpg" width="320" height="320">
+                <p>『着物ト音』ヒロキ・メリー<br>
+                    クラリネット・バイオリン</p>
+            </div>
         </div>
     </body>
 </html>
