Update:出演者追加

--- a/casts.html
+++ b/casts.html
@@ -50,6 +50,11 @@
                 <p>『着物ト音』ヒロキ・メリー<br>
                     クラリネット・バイオリン</p>
             </div>
+            <div class="member">
+                <img src="./images/ufufu.jpg" width="320" height="320">
+                <p>ウフフワッハッハ<br>
+                    歯楽器</p>
+            </div>
         </div>
     </body>
 </html>
