--- a/corner.html
+++ b/corner.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>ガッキ使い</title>
         <meta name="description" content="楽器の使い手による新感覚バラエティ風お笑いライブ">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="http://unpkg.com./ress/dist/ress.min.css">
         <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
         <link href="css/styles.css" rel="stylesheet">
