Add:ハンバーガーボタン

--- a/inquiry.html
+++ b/inquiry.html
@@ -12,7 +12,12 @@
     <body>
         <header class="page-header wrapper">
             <h1><a href="index.html">ガッキ使い</a></h1>
-            <nav class="main-nav">
+            <button class="hamburger" id="js-hamburger" aria-label="メニューを開く">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <nav class="main-nav" id="js-nav">
                 <li><a href="about.html">ガッキ使いとは</a></li>
                 <li><a href="corner.html">主な企画</a></li>
                 <li><a href="casts.html">ガッキ使い達</a></li>
@@ -28,5 +33,13 @@
                 <a href="https://www.secure-cloud.jp/sf/sp/1750422125ikDhGCoz">チケットの予約はこちら！</a>
             </p>
         </div>
+        <script>
+            const hamburger = document.getElementById('js-hamburger');
+            const nav = document.getElementById('js-nav');
+            hamburger.addEventListener('click', () => {
+                nav.classList.toggle('active');
+                hamburger.classList.toggle('active');
+            });
+        </script>
     </body>
 </html>
