Update:about.html

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                 お笑い芸人の中には、実は学生時代に吹奏楽部などで楽器を経験していた人が意外と多くいます。<br>
                 しかし、舞台ではその特技をネタに活かす機会が少なく、せっかくの腕前が埋もれたまま…ということも。<br>
                 だったら、「楽器ができる人が、楽器を通じて遊び心のあるライブをやったら面白いのでは？」<br><br>
-                そんな発想から生まれたのが《ガッキ使い》です。<br><br>
+                そんな発想から生まれたのが<br>《ガッキ使い》<br>です。<br><br>
                 最初は芸人を中心に集めようとしていたのですが、せっかくなら業界の垣根を越えてみよう！と方向転換。<br>
                 俳優、モデル、コスプレイヤーなど、さまざまなジャンルの人たちに声をかけてみることにしました。<br>
                 もちろん、ガチの演奏家の参加も大歓迎！ただし、あくまで“遊び心”がベースのイベントです。<br>
