--- a/casts.html
+++ b/casts.html
@@ -57,13 +57,6 @@
                     歯楽器</p>
             </div>
         </div>
-        <script>
-            const hamburger = document.getElementById('js-hamburger');
-            const nav = document.getElementById('js-nav');
-            hamburger.addEventListener('click', () => {
-                nav.classList.toggle('active');
-                hamburger.classList.toggle('active');
-            });
-        </script>
+        <script src="./js/main.js"></script>
     </body>
 </html>
