--- a/faq.html
+++ b/faq.html
@@ -80,13 +80,6 @@
                 ただし、手作りの飲食物など、内容によってはご配慮をお願いいたします。
             </p>
         </div>
-        <script>
-            const hamburger = document.getElementById('js-hamburger');
-            const nav = document.getElementById('js-nav');
-            hamburger.addEventListener('click', () => {
-                nav.classList.toggle('active');
-                hamburger.classList.toggle('active');
-            });
-        </script>
+        <script src="./js/main.js"></script>
     </body>
 </html>
