--- a/inquiry.html
+++ b/inquiry.html
@@ -33,13 +33,6 @@
                 <a href="https://www.secure-cloud.jp/sf/sp/1750422125ikDhGCoz">チケットの予約はこちら！</a>
             </p>
         </div>
-        <script>
-            const hamburger = document.getElementById('js-hamburger');
-            const nav = document.getElementById('js-nav');
-            hamburger.addEventListener('click', () => {
-                nav.classList.toggle('active');
-                hamburger.classList.toggle('active');
-            });
-        </script>
+        <script src="./js/main.js"></script>
     </body>
 </html>
