--- a/about.html
+++ b/about.html
@@ -47,13 +47,6 @@
                 どうぞお気軽にご参加ください！
             </p>
         </div>
-        <script>
-            const hamburger = document.getElementById('js-hamburger');
-            const nav = document.getElementById('js-nav');
-            hamburger.addEventListener('click', () => {
-                nav.classList.toggle('active');
-                hamburger.classList.toggle('active');
-            });
-        </script>
+        <script src="./js/main.js"></script>
     </body>
 </html>
