--- a/corner.html
+++ b/corner.html
@@ -35,13 +35,6 @@
             <h3>音で伝えろ!ターゲットは誰だ?!</h3>
             <p>音を使ってお題に人を表現し、目隠しをした回答者は音だけで誰かを当てていきます！</p>
         </div>
-        <script>
-            const hamburger = document.getElementById('js-hamburger');
-            const nav = document.getElementById('js-nav');
-            hamburger.addEventListener('click', () => {
-                nav.classList.toggle('active');
-                hamburger.classList.toggle('active');
-            });
-        </script>
+        <script src="./js/main.js"></script>
     </body>
 </html>
