--- a/index.html
+++ b/index.html
@@ -29,13 +29,6 @@
         <div class="about wrapper">
             <img src="./images/flier.jpg">
         </div>
-        <script>
-            const hamburger = document.getElementById('js-hamburger');
-            const nav = document.getElementById('js-nav');
-            hamburger.addEventListener('click', () => {
-                nav.classList.toggle('active');
-                hamburger.classList.toggle('active');
-            });
-        </script>
+        <script src="./js/main.js"></script>
     </body>
 </html>
