--- a/faq.html
+++ b/faq.html
@@ -46,8 +46,8 @@
                 チケット2枚目(学生料金が含まれる場合、学生チケットを1枚目にカウント)から全額バックと致します。<br>
                 ⸻<br>
                 Q. イベントの時間はどれくらいですか？<br>
-                本編は19:00〜20:00過ぎ頃までを予定しています。<br>
-                その後に写真撮影や出演者との交流タイムも設ける予定です。<br>
+                本編は19:00〜20:00過ぎ頃までの予定です。<br>
+                その後写真撮影や出演者との交流タイムも設ける予定です。<br>
                 ⸻<br>
                 Q. 演奏の練習はどれくらい必要ですか？<br>
                 厳密なリハーサルはなく、機転を利かせて楽しむスタイルのライブです。<br>
@@ -55,29 +55,30 @@
                 提供されたピアノ譜を参考に、自由に音を重ねて合奏を楽しむ形になります。<br>
                 なお、歌唱は禁止となっています。<br>
                 ⸻<br>
-                Q. 衣装の着替えはありますか？<br>
+                Q. 衣装の着替えはできますか？<br>
                 男女別の楽屋を用意しており、それぞれの中にカーテンも設置してあります。<br>
                 衣装を重視して活動されている方でも、安心してお着替えいただけます。<br>
                 ⸻<br>
                 Q. 終演後にお客さんと交流できますか？<br>
                 はい、写真撮影や交流の時間を長めに設ける予定です。<br>
-                ただし、物販や有料のチェキ撮影など、お金のやり取りが発生する行為はご遠慮ください。<br>
+                但し、お金のやり取りが発生する行為はご遠慮ください。<br>
                 ⸻<br>
                 Q. 芸人でなくても参加できますか？<br>
-                「楽しく楽器をやるライブ」という趣旨に賛同していただける方なら、どなたでも歓迎です。<br>
-                但し、あくまで「興行」としてのライブであり下記の方には難しいことご理解ください。<br>
+                「楽しく楽器をやるライブ」という趣旨に賛同して頂ける方なら、どなたでも歓迎です。<br>
+                但し、あくまで興行としてのライブであり下記の方には難しいことご理解ください。<br>
                 ・身内だけで発表したい方<br>
                 ・世間に活動を知られたくない方<br>
-                ・技術を見せたい、PRしたいという色が強い方<br>
+                ・技術力をPRしたいという色が強い方<br>
                 ⸻<br>
-                Q. 知人で参加させたい人がいるのですが…<br>
+                Q. 参加させたい知人がいるのですが…<br>
                 他薦も大歓迎です！<br>
-                「この人おもしろそう」「出たらウケそう」<br>
-                といった方がいれば、ぜひご紹介ください。<br>
+                「この人おもしろそう」<br>
+                「出たらウケそう」<br>
+                といった方も是非ご紹介ください。<br>
                 ⸻<br>
                 Q. 差し入れは可能ですか？<br>
-                はい、受付時点でも終演後でも差し入れは可能です。<br>
-                ただし、手作りの飲食物など、内容によってはご配慮をお願いいたします。
+                はい、受付時点でも終演後でも可能です。<br>
+                但し、手作りの飲食物など、内容によってはご配慮をお願いいたします。
             </p>
         </div>
         <script src="./js/main.js"></script>
