Update:出演者追加

--- a/casts.html
+++ b/casts.html
@@ -56,6 +56,11 @@
                 <p>ウフフワッハッハ<br>
                     歯楽器</p>
             </div>
+            <div class="member">
+                <img src="./images/hirono.jpg" width="320" height="320">
+                <p>紘野聖子<br>
+                    バイオリン</p>
+            </div>
         </div>
         <script src="./js/main.js"></script>
     </body>
