Update:出演者追加

--- a/casts.html
+++ b/casts.html
@@ -61,6 +61,11 @@
                 <p>紘野聖子<br>
                     バイオリン</p>
             </div>
+            <div class="member">
+                <img src="./images/maya.jpg" width="320" height="320">
+                <p>まやくん<br>
+                    アコースティックギター</p>
+            </div>
         </div>
         <script src="./js/main.js"></script>
     </body>
