Update:出演者追加

--- a/casts.html
+++ b/casts.html
@@ -66,6 +66,11 @@
                 <p>まやくん<br>
                     アコースティックギター</p>
             </div>
+            <div class="member">
+                <img src="./images/ramutaro.jpg" width="320" height="320">
+                <p>らむ太郎<br>
+                    チェロ</p>
+            </div>
         </div>
         <script src="./js/main.js"></script>
     </body>
