--- a/faq.html
+++ b/faq.html
@@ -43,7 +43,7 @@
                 ⸻<br>
                 Q. 差し入れは可能ですか？<br>
                 はい、受付時点でも終演後でも可能です。<br>
-                但し内容によってはご配慮お願い致します。<br>
+                但し物によってはご配慮お願いします。<br>
                 例として手作りの飲食物等です。
             </p>
         </div>
