Update:会場アクセス

--- a/location.html
+++ b/location.html
@@ -47,6 +47,10 @@
                     </div>
                 </div>
             </div>
+            <div class="tweet-center">
+                <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">8月9日(土)『ガッキ使い』<br>【武蔵野スイングホールへの行き方】<br><br>武蔵境駅の北口またはnonowa口から出たら見えます！<br>大きい方の改札から出て左が北口、小さい方の改札がnonowa口です。<br><br>「トモズ」「ドトール」「ロイヤルホスト」を目印にするとよいです！<br><br>予約→<a href="https://t.co/ArCgRrwX10">https://t.co/ArCgRrwX10</a> <a href="https://t.co/DYiQ3zDzbo">pic.twitter.com/DYiQ3zDzbo</a>
+                </p>&mdash; こむそう.com (@komusou_syaku) <a href="https://twitter.com/komusou_syaku/status/1952210276666998853?ref_src=twsrc%5Etfw">August 4, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
         </section>
         <script src="./js/main.js"></script>
     </body>
