Update:出演者追加

--- a/casts.html
+++ b/casts.html
@@ -64,12 +64,17 @@
             <div class="member">
                 <img src="./images/maya.jpg" width="320" height="320">
                 <p>まやくん<br>
-                    アコースティックギター</p>
+                    ギター</p>
             </div>
             <div class="member">
                 <img src="./images/ramutaro.jpg" width="320" height="320">
                 <p>らむ太郎<br>
                     チェロ</p>
+            </div>
+            <div class="member">
+                <img src="./images/mecha.jpg" width="320" height="320">
+                <p>メカイノウエ<br>
+                    ギター</p>
             </div>
         </div>
         <script src="./js/main.js"></script>
