--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         </header>
         <div class="about wrapper">
             <h2 id="about">ガッキ使いとは</h2>
-            <img src="./images/gakkiTsukai.jpg" width="640" height="400">
+            <img src="./images/flier.jpg">
             <div class="tweet-center">
                 <blockquote class="twitter-tweet"><p lang="zxx" dir="ltr"><a href="https://t.co/31REioLvhQ">https://t.co/31REioLvhQ</a>
                 </p>&mdash; こむそう.com (@komusou_syaku) <a href="https://twitter.com/komusou_syaku/status/1936046175528124606?ref_src=twsrc%5Etfw">June 20, 2025</a></blockquote>
