--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </nav>
         </header>
         <div class="about wrapper">
-            <img src="./images/flier.jpg">
+            <img src="./images/shugo.jpg">
         </div>
         <script src="./js/main.js"></script>
     </body>
