Add:ギャラリーページ

--- a/gallery.html
+++ b/gallery.html
@@ -11,12 +11,12 @@
     </head>
     <body>
         <header class="page-header wrapper">
-            <h1><a href="index.html">ガッキ使い</a></h1>
             <button class="hamburger" id="js-hamburger" aria-label="メニューを開く">
                 <span></span>
                 <span></span>
                 <span></span>
             </button>
+            <h1><a href="index.html">ガッキ使い</a></h1>
             <nav class="main-nav" id="js-nav">
                 <li><a href="about.html">ガッキ使いとは</a></li>
                 <li><a href="corner.html">主な企画</a></li>
@@ -28,7 +28,15 @@
             </nav>
         </header>
         <div class="about wrapper">
-            <img src="./images/shugo.jpg">
+            <h2 id="gallery">ギャラリー</h2>
+            <div class="tweet-center">
+                <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">ガッキ使い<br><br>オープニング合奏『夏色』 <a href="https://t.co/hrJiND9JPM">pic.twitter.com/hrJiND9JPM</a>
+                </p>&mdash; こむそう.com (@komusou_syaku) <a href="https://twitter.com/komusou_syaku/status/1954351588405096826?ref_src=twsrc%5Etfw">August 10, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+            <div class="tweet-center">
+                <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">ガッキ使い<br><br>エンディング合奏『夏祭り』 <a href="https://t.co/NUvZx6bL9B">pic.twitter.com/NUvZx6bL9B</a>
+                </p>&mdash; こむそう.com (@komusou_syaku) <a href="https://twitter.com/komusou_syaku/status/1954352847925153847?ref_src=twsrc%5Etfw">August 10, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
         </div>
         <script src="./js/main.js"></script>
     </body>
