--- a/location.html
+++ b/location.html
@@ -24,6 +24,7 @@
                 <li><a href="faq.html">よくある質問</a></li>
                 <li><a href="inquiry.html">お問い合わせ</a></li>
                 <li><a href="location.html">会場</a></li>
+                <li><a href="gallery.html">ギャラリー</a></li>
             </nav>
         </header>
         <section id="location">
