--- a/gallery.html
+++ b/gallery.html
@@ -37,6 +37,10 @@
                 <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">ガッキ使い<br><br>エンディング合奏『夏祭り』 <a href="https://t.co/NUvZx6bL9B">pic.twitter.com/NUvZx6bL9B</a>
                 </p>&mdash; こむそう.com (@komusou_syaku) <a href="https://twitter.com/komusou_syaku/status/1954352847925153847?ref_src=twsrc%5Etfw">August 10, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
+            <div class="tweet-center">
+                <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">ガッキ使い<br>終演後の一幕 <a href="https://t.co/dqHpn3w5mX">pic.twitter.com/dqHpn3w5mX</a>
+                </p>&mdash; こむそう.com (@komusou_syaku) <a href="https://twitter.com/komusou_syaku/status/1955591190541488140?ref_src=twsrc%5Etfw">August 13, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
         </div>
         <script src="./js/main.js"></script>
     </body>
